@@ -1,5 +1,5 @@
 AUX 61python-mode-gentoo.el 555 RMD160 09e7e5d32a3a22fa694e2e66edffbfbc74598ef0 SHA1 fde0e4104ce6950239ae58811ecaf98847a7de10 SHA256 8a589a90bcc3935fb8c2fcd69e7f14fae2fc4dd417ec1f02b6f9eeca27226aef
-DIST python-mode.el 160977 RMD160 2ae0f8a2d826179673ae03d899dcec4f7bbaa0d3 SHA1 1b2872492565688a191b674cdbe02016472dc4cf SHA256 cbce0d9c8f1c32055ce25c6848233a9c5d9ad0bec433c3de1598b7fabdbfe485
-EBUILD python-mode-5.1.0.ebuild 602 RMD160 ac1f3d44409faf4631179dcaa172435a9af9bbcd SHA1 e7eb61446a7f1402dd43b598912573cb8c57229b SHA256 aeffc9fb9199bc3d1e0e74c930ed8978cadb73aa6818308aef4cb2ba7f0271e4
-MISC ChangeLog 337 RMD160 bbc953aab1f554d1f360213a117b55c40954d57d SHA1 bcca7c842ea4eccf44532fccf62af4c0ce925db6 SHA256 2456d2384c982b404dedd38cbc0d0380d19d1cf3b4720b9b338717ac06b3a3bd
+DIST python-mode-5.1.0.el.bz2 37743 RMD160 df04f1ae210dc1eba4f43d80c4e1cabd930b53c5 SHA1 e58ed01bc7e63d6be76e9d65642e6245f15b27c1 SHA256 e9db2017996b6dbfb4fdb4fd725cd86a043990616bac981160c3118bd352633c
+EBUILD python-mode-5.1.0.ebuild 590 RMD160 f98dfde6bf9ffebdfff37b5eb40601e4e1bed331 SHA1 53e624b422cbb02169290ef149d170940dee0e88 SHA256 94fdff13fdb8687e0ef0710f712f724d55e8c73748e29919acf6e1f3da6047f7
+MISC ChangeLog 501 RMD160 6f368ebdad90e38d492aebe3a397a848f0e18454 SHA1 747e9204724a1829e0ff649bcb6531be05c3eb60 SHA256 deab2e6deca2c827214fbe85703454e2b10330f4a5d274a999345fba40d40671
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
