@@ -6,18 +6,15 @@ inherit elisp
 
 DESCRIPTION="An Emacs major mode for editing Python source"
 HOMEPAGE="https://launchpad.net/python-mode"
-SRC_URI="http://launchpad.net/python-mode/trunk/5.1.0/+download/python-mode.el"
+# taken from http://launchpad.net/${PN}/trunk/${PV}/+download/${PN}.el"
+SRC_URI="http://dev.gentoo.org/~ulm/distfiles/${P}.el.bz2"
 
 LICENSE="GPL-3"
 SLOT="0"
 KEYWORDS="~x86"
-IUSE="pymacs"
+IUSE=""
 
 DEPEND=""
 RDEPEND="${DEPEND}"
 
 SITEFILE=61${PN}-gentoo.el
-
-src_unpack() {
-	cp "${DISTDIR}"/${PN}.el "${WORKDIR}"
-}
