@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Feb 2009; Ulrich Mueller <ulm@gentoo.org> python-mode-5.1.0.ebuild:
+  Remove unused flag from IUSE. Use versioned distfile.
+
+*python-mode-5.1.0 (07 Feb 2009)
+
   07 Feb 2009; Christian Faulhammer <fauli@gentoo.org>
   +files/61python-mode-gentoo.el, +metadata.xml, +python-mode-5.1.0.ebuild:
   make a version bump as split-out of app-emacs/python-mode in the official
